cabal-version:       2.2
name:                miso-lynx-examples
version:             1.9.0.0
category:            Web, Miso, Data Structures
author:              David M. Johnson <code@dmj.io>
maintainer:          David M. Johnson <code@dmj.io>
homepage:            http://github.com/dmjio/miso
copyright:           Copyright (c) 2016-2025 David M. Johnson
bug-reports:         https://github.com/dmjio/miso-lynx/issues
build-type:          Simple
synopsis:            A tasty Haskell mobile framework
description:         Examples for miso-lynx
license:             BSD-3-Clause
license-file:        LICENSE

common options
  ghc-options:
    -funbox-strict-fields -O2 -ferror-spans -fspecialise-aggressively -Wall

  if arch(javascript)
    ld-options:
      -sENVIRONMENT=shell -sWASM=0

executable counter
  import:
    options
  default-language:
    Haskell2010
  main-is:
    Main.hs
  ghcjs-options:
    -dedupe
  cpp-options:
    -DGHCJS_BROWSER
  hs-source-dirs:
    counter
  build-depends:
    aeson,
    base < 5,
    containers,
    miso,
    miso-lynx
